--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-10" />
+<meta name="date" content="2023-12-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -88,8 +88,9 @@
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp"><i class="fa fa-check"></i><b>4.2</b> GDP</a>
 <ul>
-<li class="chapter" data-level="4.2.1" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp-revisions"><i class="fa fa-check"></i><b>4.2.1</b> GDP Revisions</a></li>
-<li class="chapter" data-level="4.2.2" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp-alternatives"><i class="fa fa-check"></i><b>4.2.2</b> GDP Alternatives</a></li>
+<li class="chapter" data-level="4.2.1" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp-mismeasurement"><i class="fa fa-check"></i><b>4.2.1</b> GDP mismeasurement</a></li>
+<li class="chapter" data-level="4.2.2" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp-revisions"><i class="fa fa-check"></i><b>4.2.2</b> GDP Revisions</a></li>
+<li class="chapter" data-level="4.2.3" data-path="economic-measurements.html"><a href="economic-measurements.html#gdp-alternatives"><i class="fa fa-check"></i><b>4.2.3</b> GDP Alternatives</a></li>
 </ul></li>
 <li class="chapter" data-level="4.3" data-path="economic-measurements.html"><a href="economic-measurements.html#sna"><i class="fa fa-check"></i><b>4.3</b> SNA</a></li>
 </ul></li>
