--- a/economic-modelling.html
+++ b/economic-modelling.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-13" />
+<meta name="date" content="2023-12-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="economic-measurements.html"/>
-<link rel="next" href="cost-benefit-analysis.html"/>
+<link rel="next" href="solow-model.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -104,9 +104,10 @@
 <li class="chapter" data-level="5.6" data-path="economic-modelling.html"><a href="economic-modelling.html#input-output"><i class="fa fa-check"></i><b>5.6</b> Input-Output</a></li>
 <li class="chapter" data-level="5.7" data-path="economic-modelling.html"><a href="economic-modelling.html#lowgrow-sfc"><i class="fa fa-check"></i><b>5.7</b> LowGrow SFC</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html"><i class="fa fa-check"></i><b>6</b> Cost Benefit Analysis</a>
+<li class="chapter" data-level="6" data-path="solow-model.html"><a href="solow-model.html"><i class="fa fa-check"></i><b>6</b> Solow Model</a></li>
+<li class="chapter" data-level="7" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html"><i class="fa fa-check"></i><b>7</b> Cost Benefit Analysis</a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html#discounting"><i class="fa fa-check"></i><b>6.1</b> Discounting</a></li>
+<li class="chapter" data-level="7.1" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html#discounting"><i class="fa fa-check"></i><b>7.1</b> Discounting</a></li>
 </ul></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
@@ -519,7 +520,7 @@ ing wage share experienced in the U.S. since the 1970s.</p>
         </div>
       </div>
 <a href="economic-measurements.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="cost-benefit-analysis.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="solow-model.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
