--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-13" />
+<meta name="date" content="2023-12-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -104,9 +104,10 @@
 <li class="chapter" data-level="5.6" data-path="economic-modelling.html"><a href="economic-modelling.html#input-output"><i class="fa fa-check"></i><b>5.6</b> Input-Output</a></li>
 <li class="chapter" data-level="5.7" data-path="economic-modelling.html"><a href="economic-modelling.html#lowgrow-sfc"><i class="fa fa-check"></i><b>5.7</b> LowGrow SFC</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html"><i class="fa fa-check"></i><b>6</b> Cost Benefit Analysis</a>
+<li class="chapter" data-level="6" data-path="solow-model.html"><a href="solow-model.html"><i class="fa fa-check"></i><b>6</b> Solow Model</a></li>
+<li class="chapter" data-level="7" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html"><i class="fa fa-check"></i><b>7</b> Cost Benefit Analysis</a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html#discounting"><i class="fa fa-check"></i><b>6.1</b> Discounting</a></li>
+<li class="chapter" data-level="7.1" data-path="cost-benefit-analysis.html"><a href="cost-benefit-analysis.html#discounting"><i class="fa fa-check"></i><b>7.1</b> Discounting</a></li>
 </ul></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
@@ -138,7 +139,7 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="links" class="section level1 hasAnchor" number="8">
+<div id="links" class="section level1 hasAnchor" number="9">
 <h1><span class="header-section-number">B</span> Links<a href="links.html#links" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><strong>Current Dyrehaugen Sites:</strong></p>
 <ul>
