--- a/economic-modelling.html
+++ b/economic-modelling.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-24" />
+<meta name="date" content="2024-07-26" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -491,6 +491,9 @@ ing wage share experienced in the U.S. since the 1970s.</p>
 <p><a href="http://careyking.com/new-harmoney-insights-into-the-interdependence-of-growth-structure-size-and-resource-consumption-of-the-economy/">King Summary (blog)</a></p>
 <p><a href="pdf/King_2019_HARMONEY-1.pdf">King (2019) HARMONEY-1 (pdf)</a>
 <a href="http://careyking.com/">King Website</a></p>
+<p><em>King (2022) Abstract</em></p>
+<p>This paper explains how the Human and Resources with MONEY (HARMONEY) economic growth model exhibits realistic dynamic interdependencies relating resources consumption, growth, and structural change. We explore dynamics of three major structural metrics of an economy. First, we show that an economic transition to relative decoupling of gross domestic product (GDP) from resource consumption is an expected pattern that occurs because of physical limits to growth, not a response to avoid physical limits. While increasing operational resource efficiency does increase the level of relative decoupling, so does a change in pricing from one based on full costs to one based only on marginal costs that neglect depreciation and interest payments. Marginal cost pricing leads to higher debt ratios and a perception of higher levels of relative resource decoupling. Second, if assuming full labor bargaining power for wages, when a previously-growing economy reaches peak resource extraction and GDP, wages remain high but profits and debt decline to zero. By removing bargaining power, profits can remain positive at the expense of declining wages. Third, the internal structure of HARMONEY evolves in the same way the post-World War II U.S. economy. This is measured as the distribution of intermediate transactions within the input-output tables of both the model and U.S. economy.</p>
+<p><a href="https://link.springer.com/article/10.1007/s41247-021-00093-8">King (2022) Interdependence of Growth, Structure, Size and Resource Consumption During an Economic Growth Cycle</a></p>
 <p><em>Fix on King</em></p>
 <p>Figure shows King’s key result. Without tuning it to do so, the HARMONEY model predicts that as resource use plateaus, the wage share of income should decline (top right). It so happens that this is exactly what ocurred in the United States. As energy use (per person) plateaued, the wage share of income plummeted (top left). HARMONEY also predicts that after resource use peaks, debt (as a share of GDP) should explode and then later peak (bottom right). Again, the model’s prediction is eerily similar to US history (bottom left).</p>
 <p><img src="fig/fix_on_king.png" />
