--- a/sitelog.html
+++ b/sitelog.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-24" />
+<meta name="date" content="2024-07-26" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -146,6 +146,8 @@
        gdp mismeasurement UAE example<br />
 December 23, 2023 solow\
        noah smith applies solow to china<br />
+July 25, 2024 modelling\
+       king 2022paper on Harmony added abstract<br />
 </p>
 
 
